--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,21 @@
         </div>
         <button id="predictBtn" disabled>Predict</button>
         <div class="result" id="result"></div>
+        
+        <!-- Doctor Classification Section -->
+        <div id="doctorClassification" style="display: none; margin-top: 20px; padding: 20px; background: #f8f9fa; border-radius: 8px;">
+            <h3>Doctor Confirmation</h3>
+            <p><strong>Please select the correct class:</strong></p>
+            <div class="class-buttons">
+                <button class="class-btn" data-class="0">Class 0: Normal</button>
+                <button class="class-btn" data-class="1">Class 1: Supraventricular Premature Beat</button>
+                <button class="class-btn" data-class="2">Class 2: Premature Ventricular Contraction</button>
+                <button class="class-btn" data-class="3">Class 3: Unclassifiable Beat</button>
+            </div>
+            <div style="margin-top: 15px;">
+                <button id="confirmBtn" disabled>Confirm & Save</button>
+            </div>
+        </div>
     </div>
     <button id="licenseBtn" class="fab-bottom-right" onclick="window.location.href='license.html'">View License Agreement</button>
     <script src="script.js"></script>
