--- a/public/index.html
+++ b/public/index.html
@@ -38,10 +38,18 @@
             <h3>Doctor Confirmation</h3>
             <p><strong>Please select the correct class:</strong></p>
             <div class="class-buttons">
-                <button class="class-btn" data-class="0">Class 0: Normal</button>
-                <button class="class-btn" data-class="1">Class 1: Supraventricular Premature Beat</button>
-                <button class="class-btn" data-class="2">Class 2: Premature Ventricular Contraction</button>
-                <button class="class-btn" data-class="3">Class 3: Unclassifiable Beat</button>
+                <button class="class-btn" data-class="0">
+                    Class 0: Normal
+                </button>
+                <button class="class-btn" data-class="1">
+                    Class 1: Supraventricular Premature Beat
+                </button>
+                <button class="class-btn" data-class="2">
+                    Class 2: Premature Ventricular Contraction
+                </button>
+                <button class="class-btn" data-class="3">
+                    Class 3: Unclassifiable Beat
+                </button>
             </div>
             <div style="margin-top: 15px;">
                 <button id="confirmBtn" disabled>Confirm & Save</button>
