--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,7 @@
         </div>
     </div>
     <button id="licenseBtn" class="fab-bottom-right" onclick="window.location.href='license.html'">View License Agreement</button>
+    <button id="dashboardBtn" class="fab-bottom-left" onclick="window.location.href='dashboard.html'">Dashboard</button>
     <script src="script.js"></script>
 </body>
 </html>
